# noti

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLEANUP_TODO.md  Cargo.toml  Dockerfile  LICENSE  README.md  README_zh.md  check_out.txt  clippy2.txt  docker-compose.yml  justfile  release-please-config.json  test2.txt  test3.txt  vx.toml
.codebuddy/automations/noti-clearup/: memory.md
.github/workflows/: ci.yml  deploy-docs.yml  docker.yml  generate-skills.yml  publish-skills.yml  release-please.yml  release.yml
crates/noti-cli/: Cargo.toml
crates/noti-cli/src/: input.rs  main.rs  output.rs
crates/noti-cli/src/commands/: config.rs  mod.rs  providers.rs  schema.rs  send.rs
crates/noti-cli/tests/: cli_extended_test.rs  cli_test.rs
crates/noti-core/: Cargo.toml
crates/noti-core/src/: circuit_breaker.rs  config.rs  error.rs  lib.rs  message.rs  priority.rs  provider.rs  registry.rs  retry.rs  sender.rs  status.rs  template.rs  url.rs
crates/noti-core/src/url/: helpers.rs  mod.rs
crates/noti-core/src/url/providers/: chat.rs  email.rs  misc.rs  mod.rs  push.rs  sms.rs
crates/noti-core/tests/: config_test.rs  core_types_test.rs  edge_cases_test.rs  registry_test.rs  url_parse_comprehensive_test.rs  url_parse_test.rs
crates/noti-providers/: Cargo.toml
crates/noti-providers/src/: africas_talking.rs  apns.rs  apprise.rs  bark.rs  bluesky.rs  boxcar.rs  brevo.rs  bulksms.rs  bulkvs.rs  burstsms.rs  chanify.rs  clickatell.rs  clicksend.rs  d7networks.rs  dapnet.rs  dingtalk.rs  discord.rs  dot.rs  email.rs  emby.rs  enigma2.rs  fcm.rs  feishu.rs  flock.rs  fluxer.rs  form_webhook.rs  fortysixelks.rs  freemobile.rs  gitter.rs  googlechat.rs  gotify.rs  growl.rs  guilded.rs  homeassistant.rs  http_helpers.rs  httpsms.rs  ifttt.rs  jellyfin.rs  jira.rs  join.rs  (+89 more)
crates/noti-providers/tests/: provider_send_extended_test.rs  provider_send_test.rs  provider_test.rs  register_all_test.rs
crates/noti-providers/tests/provider_send/: mod.rs  provider_automation_send_tests.rs  provider_chat_send_tests.rs  provider_email_send_tests.rs  provider_home_send_tests.rs  provider_media_send_tests.rs  provider_misc_send_tests.rs  provider_push_send_tests.rs  provider_rate_limit_tests.rs  provider_sms_send_tests.rs  provider_test_utils.rs  provider_webhook_send_tests.rs
crates/noti-queue/: Cargo.toml
crates/noti-queue/benches/: queue_throughput.rs
crates/noti-queue/src/: callback.rs  error.rs  lib.rs  memory.rs  queue.rs  sqlite.rs  task.rs  test_utils.rs  worker.rs
crates/noti-server/: Cargo.toml
crates/noti-server/src/: config.rs  lib.rs  main.rs  openapi.rs  routes.rs  state.rs  tracing_otel.rs
crates/noti-server/src/handlers/: common.rs  error.rs  health.rs  metrics.rs  mod.rs  prometheus.rs  providers.rs  queue.rs  send.rs  status.rs  storage.rs  templates.rs
crates/noti-server/src/handlers/queue/: dto.rs  handlers.rs  mod.rs  service.rs
crates/noti-server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs  validated_json.rs
crates/noti-server/tests/: e2e_backoff.rs  e2e_batch.rs  e2e_batch_priority.rs  e2e_concurrent.rs  e2e_dlq.rs  e2e_errors.rs  e2e_health_meta.rs  e2e_middleware.rs  e2e_openapi.rs  e2e_per_ip_rate.rs  e2e_priority.rs  e2e_providers.rs  e2e_queue_purge.rs  e2e_retry.rs  e2e_scheduled.rs  e2e_send.rs  e2e_sqlite_priority.rs  e2e_stale_recovery.rs  e2e_status.rs  e2e_storage.rs  e2e_templates.rs  e2e_test.rs  e2e_worker_callback.rs  server_test.rs
crates/noti-server/tests/common/: mod.rs
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/guide/: agent-integration.md  api-versioning.md  architecture.md  authentication.md  ci-cd.md  configuration.md  contributing.md  core-features.md  deployment.md  error-codes.md  getting-started.md  health-check.md  logging.md  metrics-monitoring.md  openapi.md  queue-management.md  rate-limiting.md  scheduled-send.md  sending-notifications.md  webhook-callbacks.md  what-is-noti.md
docs/providers/: chat.md  email.md  incident.md  iot-media.md  overview.md  push.md  sms.md  webhooks.md
docs/reference/: cli.md  environment-variables.md  exit-codes.md  url-schemes.md
scripts/: install.ps1  install.sh  package_openclaw_skill.py
skills/noti-cli/: SKILL.md
skills/noti-openclaw/: SKILL.md
skills/noti-openclaw/references/: install-and-usage.md  provider-guide.md
