[workspace]
members = [
  "crates/noti-cli",
  "crates/noti-core",
  "crates/noti-providers",
  "crates/noti-queue",
  "crates/noti-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.3"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/loonghao/noti"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
assert_cmd = "2.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
hmac = "0.12"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
md-5 = "0.10"
predicates = "3.1"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "multipart", "stream"] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
uuid = "1.17"
wiremock = "0.6"
