[workspace]
members = [
  "crates/noti-cli",
  "crates/noti-core",
  "crates/noti-providers",
  "crates/noti-queue",
  "crates/noti-server",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.9"
license = "MIT"
rust-version = "1.85"
repository = "https://github.com/loonghao/noti"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"
metrics = "0.24"
p256 = { version = "0.13", features = ["ecdsa"] }
prometheus-client = "0.22"
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
tracing-opentelemetry = "0.28"
assert_cmd = "2.0"
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
futures = "0.3"
http = "1"
hmac = "0.12"
humantime = "2.1"
image = "0.25"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
md-5 = "0.10"
predicates = "3.1"
mime_guess = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "multipart", "stream"] }
rstest = "0.26"
rusqlite = { version = "0.34", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
tower-http = "0.6"
tracing = "0.1"
tracing-attributes = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2.5"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = "1.17"
validator = { version = "0.19", features = ["derive"] }
wiremock = "0.6"
