[package]
name = "noti-cli"
description = "A unified multi-channel notification CLI for AI agents"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "noti"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
noti-core = { path = "../noti-core" }
noti-providers = { path = "../noti-providers" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
rstest = { workspace = true }
tempfile = "3.18"
