[package]
name = "noti-core"
description = "Core types and traits for the noti notification CLI"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
dirs = { workspace = true }
mime_guess = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = "3.18"
serde_json = { workspace = true }
tokio = { workspace = true }
