[package]
name = "noti-providers"
description = "Notification provider implementations for noti CLI"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
hmac = { workspace = true }
lettre = { workspace = true }
md-5 = { workspace = true }
noti-core = { path = "../noti-core" }
p256 = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rstest = { workspace = true }
url = { workspace = true }
wiremock = { workspace = true }
