[package]
name = "noti-queue"
description = "Message queue abstraction for async notification processing"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
openapi = ["utoipa", "noti-core/openapi"]
sqlite = ["rusqlite"]

[dependencies]
async-trait = { workspace = true }
noti-core = { path = "../noti-core" }
reqwest = { workspace = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
tracing = { workspace = true }
utoipa = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rstest = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[[bench]]
name = "queue_throughput"
harness = false
