[package]
name = "noti-server"
description = "REST API server for the noti notification service"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "noti-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
noti-core = { path = "../noti-core" }
noti-providers = { path = "../noti-providers" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
axum-test = "19"
rstest = { workspace = true }
