[package]
name = "noti-server"
description = "REST API server for the noti notification service"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "noti-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
http = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
metrics = { workspace = true }
prometheus-client = { workspace = true }
humantime = { workspace = true }
noti-core = { path = "../noti-core", features = ["openapi"] }
noti-providers = { path = "../noti-providers" }
noti-queue = { path = "../noti-queue", features = ["openapi", "sqlite"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-attributes = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
validator = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
axum-test = "19"
humantime = { workspace = true }
reqwest = { workspace = true }
rstest = { workspace = true }
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
